<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.gigold.pay</groupId>
	<artifactId>demo</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<name>demo</name>
	<description>演示整体框架使用情况	</description>

	<!-- <build> <resources> <resource> <directory>src/main/java</directory> 
		<includes> <include>**/*.properties</include> <include>**/*.xml</include> 
		</includes> <filtering>false</filtering> </resource> <resource> <directory>src/main/resources</directory> 
		</resource> </resources> <plugins> <plugin> <artifactId>maven-war-plugin</artifactId> 
		<version>2.6</version> <configuration> <warSourceDirectory>webapp</warSourceDirectory> 
		<failOnMissingWebXml>false</failOnMissingWebXml> </configuration> </plugin> 
		<plugin> <artifactId>maven-compiler-plugin</artifactId> <version>3.3</version> 
		<configuration> <source>1.7</source> <target>1.7</target> </configuration> 
		</plugin> </plugins> </build> -->
	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.properties</include>
					<include>**/*.xml</include>
				</includes>
				<filtering>false</filtering>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<encoding>UTF-8</encoding>
					<!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<attach>true</attach>
				</configuration>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<argLine>-Xmx512m -XX:PermSize=128m -XX:MaxPermSize=128m</argLine>
					<testFailureIgnore>true</testFailureIgnore>
					<includes>
						<include>**/*Test*.java</include>
					</includes>
					<excludes />
				</configuration>
			</plugin>
		</plugins>
	</build>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<framework.version>0.1.4-SNAPSHOT</framework.version>

		<!-- environment setting -->
		<jdk.version>1.7</jdk.version>
		<tomcat.version>2.2</tomcat.version>


	</properties>

	<!-- 设定主仓库，按设定顺序进行查找。 -->
	<repositories>

		<repository>
			<id>releases</id>
			<name>Team Nexus Repository</name>
			<url>http://123.57.152.75:8021/nexus/content/groups/public</url>
		</repository>

	</repositories>

	<!-- 设定插件仓库 -->
	<pluginRepositories>

		<pluginRepository>
			<id>oschina-repos</id>
			<name>Oschina Releases</name>
			<url>http://maven.oschina.net/content/groups/public</url>
		</pluginRepository>
	</pluginRepositories>

	<dependencies>

		<!-- modules begin -->
		<dependency>
			<groupId>com.gigold.pay</groupId>
			<artifactId>pay-framework-version</artifactId>
			<version>0.1.5-SNAPSHOT</version>
			<exclusions>
				<exclusion>  <!-- declare the exclusion here -->
					<groupId>com.gigold.pay</groupId>
					<artifactId>pay-framework-web</artifactId>
				</exclusion>
			</exclusions>


		</dependency>
		<!-- modules end -->

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>
		<dependency>
			<groupId>org.jmockit</groupId>
			<artifactId>jmockit</artifactId>
			<version>1.20</version>
		</dependency>
		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock-junit4</artifactId>
			<version>2.6.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock-legacy</artifactId>
			<version>2.6.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>1.6.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>1.6.3</version>
			<scope>test</scope>
		</dependency>

		<!-- LOGGING begin -->
		<!-- LOGGING end -->


	</dependencies>

	<distributionManagement>
		<repository>
			<id>releases</id>
			<name>Gigold Nexus Repository</name>
			<url>http://123.57.152.75:8021/nexus/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Gigold Nexus Repository</name>
			<url>http://123.57.152.75:8021/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>


	<modules>
		<module>demo-web</module>
		<module>demo-domain</module>
		<module>demo-rpc</module>
		<module>demo-dubbo-provider</module>
		<module>demo-api</module>
		<module>demo-dubbo-service</module>
		<module>demo-dubbo-consume</module>
		<module>demo-dubbo-web</module>
	</modules>
</project>